# evidenceops-agent

./: .env.example  .gitignore  EvidenceOps_Agent_Documentation (1).docx  EvidenceOps_Agent_Documentation.docx  main.py  pyproject.toml  test_agent.py  test_connection.py  test_query.py
app/: cli.py  config.py  ingest.py  models.py  orchestrator.py
app/agents/: research_agent.py
app/api/: main.py
app/services/: index_service.py  llm.py
app/tools/: research_tools.py
data/: agent_engineering.md  ai_governance_overview.md  operational_procedures.md  retrieval_evaluation.md  technical_policy.md
evaluation/: evaluation_dataset.jsonl  evaluation_results.jsonl  run_evaluation.py
tests/: test_api.py  test_orchestrator.py  test_tools.py
